test/error/error.input75.zc
Unexpected token in switch:27 on line 4
